--- a/src/app/dialogs/add-expressed-proteins/add-expressed-proteins.component.html
+++ b/src/app/dialogs/add-expressed-proteins/add-expressed-proteins.component.html
@@ -4,20 +4,20 @@
     <header class="modal-card-head">
       <p class="modal-card-title">
         <span class="icon"><i class="fa fa-dna"></i></span>
-        Add Tissue Proteins
+        Add Tissue Genes
       </p>
       <button (click)="close()" class="delete" aria-label="close"></button>
     </header>
     <section class="modal-card-body">
       <div class="notification is-warning" *ngIf="addedCount === 0">
-        No host proteins have been selected or added.
+        No genes have been selected or added.
       </div>
       <div class="notification is-warning" *ngIf="addedCount > 0">
-        {{addedCount}} host proteins have been selected or added.
+        {{addedCount}} genes have been selected or added.
       </div>
       <p *ngIf="!selectedTissue">
         <i>
-          In order to add proteins expressed in specific tissues,
+          In order to add genes expressed in specific tissues,
           please select a tissue in the main network window to the bottom.
         </i>
       </p>
@@ -31,29 +31,29 @@
                  placeholder="Threshold" required>
         </div>
         <p class="help">
-          All proteins above this threshold in transcripts per million (TPM) will be added or selected.
+          All genes above this threshold in transcripts per million (TPM) will be added or selected.
         </p>
       </div>
     </section>
     <footer class="modal-card-foot">
-      <button (click)="addProteins();" class="button is-success   has-tooltip"
+      <button (click)="addGenes();" class="button is-success   has-tooltip"
               data-tooltip="Add all to the selection."
-              [disabled]="proteins.length === 0 || !selectedTissue || loading">
+              [disabled]="genes.length === 0 || !selectedTissue || loading">
         <span class="icon">
           <i class="fas fa-plus"></i>
         </span>
         <span>
-          Add proteins
+          Add genes
         </span>
       </button>
-      <button (click)="addVisibleProteins();" class="button is-success   has-tooltip"
+      <button (click)="addVisibleGenes();" class="button is-success   has-tooltip"
               data-tooltip="Add to selection if they appear in the current network."
-              [disabled]="proteins.length === 0 || !selectedTissue || loading">
+              [disabled]="genes.length === 0 || !selectedTissue || loading">
         <span class="icon">
           <i class="fas fa-expand"></i>
         </span>
         <span>
-          Select proteins ({{proteins.length}})
+          Select genes ({{genes.length}})
         </span>
       </button>
       <button (click)="close()" class="button   has-tooltip" data-tooltip="Close the current window.">
