--- a/src/app/pages/drug-lookup-page/drug-lookup-page.component.html
+++ b/src/app/pages/drug-lookup-page/drug-lookup-page.component.html
@@ -44,7 +44,7 @@
         <ng-template pTemplate="header">
           <tr>
             <th>
-              DB ID
+              DrugBank ID
             </th>
             <th>
               Name
