--- a/src/app/pages/drug-lookup-page/drug-lookup-page.component.html
+++ b/src/app/pages/drug-lookup-page/drug-lookup-page.component.html
@@ -121,7 +121,7 @@
           <span class="icon"><i class="fa fa-dna"></i></span>
           <span>Genes ({{ searchResult.genes.length }})</span>
         </h4>
-        <a [href]="downloadLink('csv')" class="button is-primary is-outlined is-pulled-right is-small">
+        <a [href]="downloadLink('csv')" class="download button is-primary is-outlined is-pulled-right is-small">
           <span class="icon"><i class="fa fa-download"></i></span>
           <span>Download</span>
         </a>
