--- a/src/app/pages/explorer-page/components/sidebar/dialogs/add-cancer-expressed-genes/add-cancer-expressed-genes.component.html
+++ b/src/app/pages/explorer-page/components/sidebar/dialogs/add-cancer-expressed-genes/add-cancer-expressed-genes.component.html
@@ -41,7 +41,7 @@
         </div>
       </section>
       <footer class="modal-card-foot">
-        <button (click)="addGenes();" class="button is-success   has-tooltip"
+        <button (click)="addGenes();" class="button is-success has-tooltip-right"
                 data-tooltip="Add all to the selection."
                 [disabled]="!selectedExpressionCancerType || loading">
           <span class="icon">
