--- a/src/app/pages/explorer-page/components/sidebar/dialogs/add-expressed-proteins/add-expressed-proteins.component.html
+++ b/src/app/pages/explorer-page/components/sidebar/dialogs/add-expressed-proteins/add-expressed-proteins.component.html
@@ -36,7 +36,7 @@
       </div>
     </section>
     <footer class="modal-card-foot">
-      <button (click)="addGenes();" class="button is-success   has-tooltip"
+      <button (click)="addGenes();" class="button is-success has-tooltip-right"
               data-tooltip="Add all to the selection."
               [disabled]="!tissue || loading">
         <span class="icon">
