--- a/src/app/pages/explorer-page/components/sidebar/dialogs/add-mutated-genes/add-mutated-genes.component.html
+++ b/src/app/pages/explorer-page/components/sidebar/dialogs/add-mutated-genes/add-mutated-genes.component.html
@@ -44,7 +44,7 @@
         </div>
       </section>
       <footer class="modal-card-foot">
-        <button (click)="addGenes();" class="button is-success has-tooltip"
+        <button (click)="addGenes();" class="button is-success has-tooltip-right"
                 data-tooltip="Add all to the selection."
                 [disabled]="!selectedMutationCancerType || loading">
           <span class="icon">
