--- a/src/app/pages/drug-lookup-page/drug-lookup-page.component.html
+++ b/src/app/pages/drug-lookup-page/drug-lookup-page.component.html
@@ -58,7 +58,7 @@
                                 <p-sortIcon [field]="'isATCAntineoplasticAndImmunomodulatingAgent'"></p-sortIcon>
                             </th>
                             <th>
-                                In Cancernet
+                                CanceRx
                             </th>
                         </tr>
                     </ng-template>
@@ -98,7 +98,7 @@
                             <td>
                                 <span *ngIf="e.inCancernet">
                     <i class="fa fa-check has-text-primary"></i>
-                    Cancernet
+                    CanceRx
                   </span>
                                 <span *ngIf="!e.inCancernet">
                     <i class="fa fa-times"></i>
