--- a/src/app/pages/gene-lookup-page/gene-lookup-page.component.html
+++ b/src/app/pages/gene-lookup-page/gene-lookup-page.component.html
@@ -216,7 +216,7 @@
             <td>
               <span *ngIf="e.inCancernet">
                 <i class="fa fa-check has-text-primary"></i>
-                Cancernet
+                CanceRx
               </span>
               <span *ngIf="!e.inCancernet">
                 <i class="fa fa-times"></i>
