--- a/src/app/pages/drug-lookup-page/drug-lookup-page.component.html
+++ b/src/app/pages/drug-lookup-page/drug-lookup-page.component.html
@@ -1,4 +1,5 @@
 <div class="scrollable">
+    <app-cancernet-panel [drug]="explorerData.cancernetDrug" [(show)]="explorerData.showCancernetModal" (closeEvent)="explorerData.closeCancernetModal()"></app-cancernet-panel>
     <div class="content">
         <div class="container footer-padding">
             <div class="column is-8 is-offset-2">
@@ -97,9 +98,8 @@
                             </td>
                             <td>
                                 <span *ngIf="e.inCancernet">
-                    <i class="fa fa-check has-text-primary"></i>
-                    CanceRx
-                  </span>
+                                    <a (click)="explorerData.openCancernetModal(e)" >open<i class="fa fa-external-link has-text-primary"></i></a>
+                                  </span>
                                 <span *ngIf="!e.inCancernet">
                     <i class="fa fa-times"></i>
                   </span>
