--- a/src/app/pages/drug-lookup-page/drug-lookup-page.component.html
+++ b/src/app/pages/drug-lookup-page/drug-lookup-page.component.html
@@ -133,7 +133,7 @@
                                 <p-sortIcon [field]="'name'"></p-sortIcon>
                             </th>
                             <th [pSortableColumn]="'proteinName'">
-                                proteinName
+                                Protein Name
                                 <p-sortIcon [field]="'proteinName'"></p-sortIcon>
                             </th>
                             <th [pSortableColumn]="'cancerTypes'">
