--- a/src/app/pages/gene-lookup-page/gene-lookup-page.component.html
+++ b/src/app/pages/gene-lookup-page/gene-lookup-page.component.html
@@ -67,7 +67,7 @@
             <th>Entrez</th>
             <th>UniProt Code</th>
             <th>Gene</th>
-            <th>proteinName</th>
+            <th>Protein Name</th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-e>
